<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >
    <ImageView
        android:id="@+id/ugm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_ugm2"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"/>

    <ImageView
        android:padding="15dp"
        android:id="@+id/gadjah"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gadjah" />

    <androidx.cardview.widget.CardView

        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="56dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#D9FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="424dp"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profil"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:cardCornerRadius="90dp"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="98dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatarrrr" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profil"
                android:layout_marginTop="26dp"
                android:text="@string/label_name"
                android:textAlignment="center"
                android:textSize="18sp" />
            <TextView
                android:layout_below="@id/txtName"
                android:textAlignment="center"
                android:id="@+id/txtNim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nim"
                android:textSize="18sp"/>
            <TextView
                android:layout_below="@id/txtNim"
                android:textAlignment="center"
                android:id="@+id/txtProdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_prodi"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtProdi"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_to_second_activity"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:text="View details"
                    />
                <Button
                    android:id="@+id/btn_to_third_activity"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:text="Edit details"
                    />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>